force-app/main/default/objects/PricebookEntry/fields/Price_without_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_without_VAT__c</fullName>
    <label>Price (without VAT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>