force-app/main/default/objects/PricebookEntry/fields/SAP_ID__c.field-meta.xml
<CustomField>
    <fullName>SAP_ID__c</fullName>
    <externalId>true</externalId>
    <label>SAP ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>